# chat-gpt-rpg

./: README.md  pyproject.toml
src/: app.py  config.py  connector.py
src/config/: settings.toml
